realty and tourism added carousel

--- a/leighfisher_app/templates/Reality.html
+++ b/leighfisher_app/templates/Reality.html
@@ -22,7 +22,7 @@
           </div>
 
           <!-- Slide 2 -->
-          <div class="carousel-item" style="background-image: url('{% static 'assets/img/realty 1' %}')">
+          <div class="carousel-item" style="background-image: url('{% static 'assets/img/realty 1.jpg' %}')">
             <div class="carousel-container">
               <div class="container">
                 <h2 class="animate__animated animate__fadeInDown">How We Help</h2>
