--- a/leighfisher_app/static/assets/css/style.css
+++ b/leighfisher_app/static/assets/css/style.css
@@ -88,7 +88,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 80px !important;
+  max-height: 70px !important;
 }
 
 @media (max-width: 992px) {
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background-image: url(assets/img/slide/slide-1.jpg);
-  background-color: white;
+  background-color: #0faf00;
   overflow: hidden;
   position: relative;
 }
@@ -466,7 +466,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 1;
   width: auto;
   height: auto;
-  background: rgba(236, 232, 232, 0.2);
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 50px;
   padding: 10px;
   transition: 0.3s;
