--- a/leighfisher_app/static/assets/css/style.css
+++ b/leighfisher_app/static/assets/css/style.css
@@ -370,7 +370,7 @@ h1, h2, h3, h4, h5, h6 {
   width: 100%;
   height: 100vh;
   background-image: url(assets/img/slide/slide-1.jpg);
-  background-color: #0faf00;
+  /* background-color: #0faf00; */
   overflow: hidden;
   position: relative;
 }
