--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -139,77 +139,77 @@
           <div class="col-md-6">
             <div class="icon-box">
               <i class="icofont-computer"></i>
-              <h4><a href="#">Trust Funding</a></h4>
+              <h4><a href="{% url 'trust_funding' %}">Trust Funding</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-chart-bar-graph"></i>
-              <h4><a href="#">Reality</a></h4>
+              <h4><a href="{% url 'Reality' %}">Reality</a></h4>
               <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-image"></i>
-              <h4><a href="#">Business/Projects Advisory</a></h4>
+              <h4><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-settings"></i>
-              <h4><a href="#">Startup Assistance</a></h4>
+              <h4><a href="{% url 'Startups_ass' %}">Startup Assistance</a></h4>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-earth"></i>
-              <h4><a href="#">Engineering Services</a></h4>
+              <h4><a href="{% url 'Engg_serv' %}">Engineering Services</a></h4>
               <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-tasks-alt"></i>
-              <h4><a href="#">Logistics</a></h4>
+              <h4><a href="{% url 'Logistics' %}">Logistics</a></h4>
               <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
             </div>
           </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="#">Power Venture</a></h4>
+            <h4><a href="{% url 'Power_Venture' %}">Power Venture</a></h4>
             <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="#">Tourism</a></h4>
+            <h4><a href="{% url 'Tourism' %}">Tourism</a></h4>
             <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="#">Constructions/Infra</a></h4>
+            <h4><a href="{% url 'Con_infra' %}">Constructions/Infra</a></h4>
             <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="#">Solar</a></h4>
+            <h4><a href="{% url 'Solar' %}">Solar</a></h4>
             <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
-            <h4><a href="#">International Trading</a></h4>
+            <h4><a href="{% url 'InternationalTrading' %}">International Trading</a></h4>
             <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
           </div>
         </div>
