index page services added

--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -140,77 +140,77 @@
             <div class="icon-box">
               <i class="icofont-computer"></i>
               <h4><a href="{% url 'trust_funding' %}">Trust Funding</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+              <p>Funding is sourced and structured efficiently to maximize returns and to be perfectly useful to either party enabling performance, pre-committed returns and coupon rates, and also capture any upside on the returns in case of windfall profits.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-chart-bar-graph"></i>
               <h4><a href="{% url 'Reality' %}">Reality</a></h4>
-              <p>Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+              <p>Realty Consultants have an in-depth working knowledge of the real estate industry and hence can provide the best advice to a customer looking for a commercial or residential property.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-image"></i>
               <h4><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</p>
+              <p>Business advisory services tackle all aspects of business from managing finances, marketing your product or service better and more widely, embarking on research and development activities, to improving your operations.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-settings"></i>
               <h4><a href="{% url 'Startups_ass' %}">Startup Assistance</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+              <p>We offer and provide a wide assortment of business startup consulting services for different organizational sectors in all around the world.Our methods have evolved to ensure that we have better flexibility and tighter monitoring in order to create stronger offerings and solutions.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-earth"></i>
               <h4><a href="{% url 'Engg_serv' %}">Engineering Services</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque</p>
+              <p>LeighFisher is a global management consulting firm that combines deep market-specific knowledge with specialized expertise in business advisory, startups assistance, international trading, logistics and trust funding. We focus on providing impactful and noticeable consulting services.</p>
             </div>
           </div>
           <div class="col-md-6 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="icofont-tasks-alt"></i>
               <h4><a href="{% url 'Logistics' %}">Logistics</a></h4>
-              <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+              <p>Our professionals hold expertise in offering Logistics Consultancy which includes solutions to problems like export, import, excise, customs, benefits and the overall procedures. By giving access to consolidated knowledge, specialization and resources, we have become one stop solution for our global clients.</p>
             </div>
           </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
             <h4><a href="{% url 'Power_Venture' %}">Power Venture</a></h4>
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p>LeighFisher is a global management consulting firm that combines deep market-specific knowledge with specialized expertise in business advisory, startups assistance, international trading, logistics and trust funding. We focus on providing impactful and noticeable consulting services.</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
             <h4><a href="{% url 'Tourism' %}">Tourism</a></h4>
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p>We advise on tourism, leisure and hospitality, delivered by our experienced team of industry and communications professionals. We believe that the strength of a marketing and communication strategy lies in its alignment with the business strategy.</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
             <h4><a href="{% url 'Con_infra' %}">Constructions/Infra</a></h4>
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p>We have a highly flexible approach and methodology that allows us to tailor services to individual client requirements.</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
             <h4><a href="{% url 'Solar' %}">Solar</a></h4>
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p></p>
           </div>
         </div>
         <div class="col-md-6 mt-4 mt-md-0">
           <div class="icon-box">
             <i class="icofont-tasks-alt"></i>
             <h4><a href="{% url 'InternationalTrading' %}">International Trading</a></h4>
-            <p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p>International trade allows countries to expand their markets and access goods and services that otherwise may not have been available domestically. As a result of international trade, the market is more competitive. This ultimately results in more competitive pricing and brings a cheaper product home to the consumer.</p>
           </div>
         </div>
 
