--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -11,7 +11,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/logo.JPEG' %}" rel="icon">
+  <link href="{% static 'assets/img/logo-display.png' %}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -44,7 +44,7 @@
 
       <!-- <a id="navbar-logo" class="navbar-brand" href="{% url 'index' %}">
         <img class="navbar-img" src="{% static 'assets/img/logo.JPEG' %}" alt="" class="img-fluid"></a> -->
-     <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/logo.JPEG' %}" alt="" class="img-fluid"></a>
+     <a href="{% url 'index' %}" class="logo"><img src="{% static 'assets/img/logo.png' %}" alt="" class="img-fluid"></a>
 
       <!-- <h1 class="logo"><a href="{% url 'index' %}">Leighfisher</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
@@ -53,7 +53,7 @@
       <nav class="nav-menu d-none d-lg-block">
 
         <ul>
-          <li class="active"><a href="{% url 'index' %}">Home</a></li>
+          <li><a href="{% url 'index' %}">Home</a></li>
 
           <li><a href="{% url 'about' %}">About</a></li>
             <!-- <ul>
@@ -89,7 +89,6 @@
             </ul>
           </li>
 
-          <li><a href="{% url 'portfolio' %}">Portfolio</a></li>
           <!-- <li><a href="{% url 'pricing' %}">Pricing</a></li> -->
           <!-- <li><a href="{% url 'blog' %}">Blog</a></li> -->
           <li><a href="{% url 'contact' %}">Contact Us</a></li>
@@ -98,7 +97,7 @@
 
       </nav><!-- .nav-menu -->
 
-      <a href="{% url 'index' %}" class="get-started-btn ml-auto">BECOME A CLIENT</a>
+      <a href="{% url 'contact' %}" class="get-started-btn ml-auto">BECOME A CLIENT</a>
 
     </div>
   </header><!-- End Header -->
@@ -146,7 +145,6 @@
 
           <div class="col-lg-3 col-md-4 footer-links">
             <h4>Our Services</h4>
-            <ul>
               <ul>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Trust Funding</a></li>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Reality</a></li>
@@ -154,6 +152,10 @@
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Startup Assistance</a></li>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Engineering Services</a></li>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Logistics</a></li>
+              </ul>
+            </div>
+            <div class="col-lg-3 col-md-4 footer-links"><br><br>
+              <ul>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Power Venture</a></li>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Tourism</a></li>
                 <li><i class="bx bx-chevron-right"></i><a href="{% url 'team' %}">Constructions/Infra</a></li>
@@ -165,7 +167,7 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Product Management</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Marketing</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Graphic Design</a></li> -->
-            </ul>
+
           </div>
 
           <!-- <div class="col-lg-4 col-md-6 footer-newsletter">
