--- a/leighfisher_app/templates/Power Venture.html
+++ b/leighfisher_app/templates/Power Venture.html
@@ -67,7 +67,7 @@
           <h2>Power Venture</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Power Venture</li>
           </ol>
         </div>
 
