--- a/leighfisher_app/templates/Solar.html
+++ b/leighfisher_app/templates/Solar.html
@@ -66,7 +66,7 @@
           <h2>Solar</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Solar</li>
           </ol>
         </div>
 
