--- a/leighfisher_app/templates/Tourism.html
+++ b/leighfisher_app/templates/Tourism.html
@@ -59,7 +59,7 @@
           <h2>Tourism</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Tourism</li>
           </ol>
         </div>
 
