--- a/leighfisher_app/templates/Con_infra.html
+++ b/leighfisher_app/templates/Con_infra.html
@@ -59,7 +59,7 @@
           <h2>Construction/Infrastructure</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Construction</li>
           </ol>
         </div>
 
