--- a/leighfisher_app/templates/InternationalTrading.html
+++ b/leighfisher_app/templates/InternationalTrading.html
@@ -56,7 +56,7 @@
           <h2>International  Trading</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>International  Trading</li>
           </ol>
         </div>
 
