--- a/leighfisher_app/templates/Logistics.html
+++ b/leighfisher_app/templates/Logistics.html
@@ -54,7 +54,7 @@
           <h2>Logistics</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Logistics</li>
           </ol>
         </div>
 
