--- a/leighfisher_app/templates/Reality.html
+++ b/leighfisher_app/templates/Reality.html
@@ -56,7 +56,7 @@
           <h2><b>Realty<b></h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Realty</li>
           </ol>
         </div>
 
