--- a/leighfisher_app/templates/Startups_ass.html
+++ b/leighfisher_app/templates/Startups_ass.html
@@ -56,7 +56,7 @@
           <h2>Startup Assitance</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Startup Assitance</li>
           </ol>
         </div>
 
