--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block body_block %}
 
-  <main id="main">
+  <main id="main1">
     <section id="hero">
       <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
@@ -47,7 +47,7 @@
       </div>
     </section><!-- End Hero -->
 
-    <!-- ======= Breadcrumbs ======= -->
+    <!-- ======= Breadcrumbs =======-->
     <section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
@@ -55,14 +55,117 @@
           <h2>Trust Funding</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li>About</li>
+            <li>Trust Funding</li>
           </ol>
         </div>
 
       </div>
     </section><!-- End Breadcrumbs -->
 
-    <!-- ======= About Section ======= -->
+    <div class="container py-3">
+    <!--  <div class="title h1 text-center">Horizontal cards - Bootstrap 4</div>
+      <!-- Card Start -->
+      <div class="card">
+        <div class="row ">
+
+          <div class="col-md-7 px-3">
+            <div class="card-block px-6">
+              <h4 class="card-title">What is trust Funding?  </h4>
+              <p class="card-text">
+                Trust funds are designed to allow a person's money to continue to be useful well after they pass away. You can place cash, stock, real estate, or other valuable assets in your trust.
+              </p>
+              <p class="card-text">A traditional irrevocable trust will likely cost a minimum of a few thousand dollars and could cost much more.</p>
+              <br>
+              <ul>
+                <li><i class="ri-check-double-line"></i>We provide a comprehensive selection of funding solutions for claimants and professionals alike. </li>
+                <li><i class="ri-check-double-line"></i>We give opportunities for the litigant to protect their capitl nd seek justice</li>
+                <li><i class="ri-check-double-line"></i>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</li>
+              </ul>
+            <!--  <a href="#" class="mt-auto btn btn-primary  ">Read More</a>-->
+            </div>
+          </div>
+          <!-- Carousel start -->
+          <div class="col-md-5">
+            <div id="CarouselTest" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#CarouselTest" data-slide-to="0" class="active"></li>
+                <li data-target="#CarouselTest" data-slide-to="1"></li>
+                <li data-target="#CarouselTest" data-slide-to="2"></li>
+
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=1072" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=855" alt="">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block" src="https://picsum.photos/450/300?image=355" alt="">
+                </div>
+                <a class="carousel-control-prev" href="#CarouselTest" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+                <a class="carousel-control-next" href="#CarouselTest" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+              </div>
+            </div>
+          </div>
+          <!-- End of carousel-->
+        </div>
+      </div>
+      <!-- End of card -->
+
+    </div>
+
+  <!--  <div class="container">
+      <div class="card float-left">
+        <div class="row ">
+
+          <div class="col-sm-7">
+            <div class="card-block">
+              <!--           <h4 class="card-title">Small card</h4> -->
+            <!--  <p>Wetgple text to build your own card.</p>
+              <p>Change around the content for awsomenes</p>
+              <a href="#" class="btn btn-primary btn-sm">Read More</a>
+            </div>
+          </div>
+
+          <div class="col-sm-5">
+            <img class="d-block w-100" src="https://picsum.photos/150?image=380" alt="">
+          </div>
+        </div>
+      </div>
+
+
+        <div class="card float-right">
+          <div class="row">
+            <div class="col-sm-5">
+              <img class="d-block w-100" src="https://picsum.photos/150?image=641" alt="">
+            </div>
+            <div class="col-sm-7">
+              <div class="card-block">
+                <!--           <h4 class="card-title">Small card</h4> -->
+          <!--      <p>Copy paste the HTML and CSS.</p>
+                <p>Change around the content for awsomenes</p>
+                <br>
+                <a href="#" class="btn btn-primary btn-sm float-right">Read More</a>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+     <br>
+    <br>
+
+
+<!-- ======= About Section ======= -->
+    <!--
     <section id="about" class="about">
       <div class="container">
 
@@ -77,12 +180,12 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
             <p>
               Funding is sourced and structured efficiently to maximize returns and to be perfectly useful to either party enabling performance, pre-committed returns and coupon rates, and also capture any upside on the returns in case of windfall profits.
             </p>
-            <ul>
-              <li><i class="ri-check-double-line"></i>We provide a comprehensive selection of funding solutions for claimants and professionals alike. </li>
-              <li><i class="ri-check-double-line"></i>We give opportunities for the litigant to protect their capitl nd seek justice</li>
-              <li><i class="ri-check-double-line"></i>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</li>
-            </ul>
             <p class="font-italic">
+            <ul>
+            <li><i class="ri-check-double-line"></i>We provide a comprehensive selection of funding solutions for claimants and professionals alike. </li>
+            <li><i class="ri-check-double-line"></i>We give opportunities for the litigant to protect their capitl nd seek justice</li>
+            <li><i class="ri-check-double-line"></i>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</li>
+          </ul>
              Funding options include equity, structured debt, bulk inventory underwriting, sale, refinancing, & many other innovative options that provide exits to both the Investors, PE Funds, Banks, NBFC’s, Lenders, and the borrower.
             </p>
           </div>
@@ -92,6 +195,7 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
     </section><!-- End About Section -->
 
     <!-- ======= Team Section ======= -->
+<!--
     <section id="team" class="team section-bg">
       <div class="container">
 
@@ -109,7 +213,8 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
                 <h4>Sajan </h4>
                 <span>Co-Founder</span>
                 <!-- <p>Explicabo voluptatem mollitia et repellat</p> -->
-                <div class="social">
+
+<!--                <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
@@ -125,8 +230,9 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
               <div class="member-info">
                 <h4>Lijo</h4>
                 <span>Co-Founder</span>
-                <!-- <p>Aut maiores voluptates amet et quis</p> -->
-                <div class="social">
+              <!-- <p>Aut maiores voluptates amet et quis</p> -->
+
+  <!--              <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
@@ -143,7 +249,8 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
                 <h4>Hari</h4>
                 <span>Co-Founder</span>
                 <!-- <p>Quisquam facilis cum velit laborum corrupti</p> -->
-                <div class="social">
+
+      <!--          <div class="social">
                   <a href=""><i class="ri-twitter-fill"></i></a>
                   <a href=""><i class="ri-facebook-fill"></i></a>
                   <a href=""><i class="ri-instagram-fill"></i></a>
@@ -170,13 +277,13 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
             </div>
           </div> -->
 
-        </div>
+      <!--  </div>
 
       </div>
     </section><!-- End Team Section -->
 
     <!-- ======= Our Skills Section ======= -->
-    <section id="skills" class="skills">
+  <!--  <section id="skills" class="skills">
       <div class="container">
 
         <div class="section-title">
@@ -242,7 +349,7 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
     </section><!-- End Our Skills Section -->
 
     <!-- ======= Breadcrumbs ======= -->
-    <section id="breadcrumbs" class="breadcrumbs">
+    <!--<section id="breadcrumbs" class="breadcrumbs">
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
@@ -257,7 +364,7 @@ A traditional irrevocable trust will likely cost a minimum of a few thousand dol
     </section><!-- End Breadcrumbs -->
 
     <!-- ======= Testimonials Section ======= -->
-    <section id="testimonials" class="testimonials">
+  <!--  <section id="testimonials" class="testimonials">
       <div class="container">
 
         <div class="row">
