--- Auto-Git Commit ---

--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -54,7 +54,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Trust Funding</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Trust Funding</li>
           </ol>
         </div>
@@ -120,6 +120,39 @@
       <!-- End of card -->
 
     </div>
+    <div class="row">
+  <div class="column">
+    <div class="card">
+      <h3>Card 1</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+
+  <div class="column">
+    <div class="card">
+      <h3>Card 2</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 3</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+  
+  <div class="column">
+    <div class="card">
+      <h3>Card 4</h3>
+      <p>Some text</p>
+      <p>Some text</p>
+    </div>
+  </div>
+</div>
 
   <!--  <div class="container">
       <div class="card float-left">
