--- a/leighfisher_app/templates/Business_adv.html
+++ b/leighfisher_app/templates/Business_adv.html
@@ -56,7 +56,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Business/ Project Advisory</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Business/Project Advisory</li>
           </ol>
         </div>
