--- a/leighfisher_app/templates/Con_infra.html
+++ b/leighfisher_app/templates/Con_infra.html
@@ -58,7 +58,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Construction/Infrastructure</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Construction</li>
           </ol>
         </div>
