--- a/leighfisher_app/templates/InternationalTrading.html
+++ b/leighfisher_app/templates/InternationalTrading.html
@@ -55,7 +55,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>International  Trading</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>International  Trading</li>
           </ol>
         </div>
@@ -245,7 +245,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Testimonials</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Testimonials</li>
           </ol>
         </div>
