--- a/leighfisher_app/templates/Logistics.html
+++ b/leighfisher_app/templates/Logistics.html
@@ -53,7 +53,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Logistics</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Logistics</li>
           </ol>
         </div>
