--- a/leighfisher_app/templates/Power Venture.html
+++ b/leighfisher_app/templates/Power Venture.html
@@ -66,7 +66,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Power Venture</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Power Venture</li>
           </ol>
         </div>
