--- a/leighfisher_app/templates/Reality.html
+++ b/leighfisher_app/templates/Reality.html
@@ -55,7 +55,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2><b>Realty<b></h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Realty</li>
           </ol>
         </div>
