--- a/leighfisher_app/templates/Solar.html
+++ b/leighfisher_app/templates/Solar.html
@@ -65,7 +65,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Solar</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Solar</li>
           </ol>
         </div>
