--- a/leighfisher_app/templates/Startups_ass.html
+++ b/leighfisher_app/templates/Startups_ass.html
@@ -55,7 +55,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Startup Assitance</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Startup Assitance</li>
           </ol>
         </div>
