--- a/leighfisher_app/templates/Tourism.html
+++ b/leighfisher_app/templates/Tourism.html
@@ -58,7 +58,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Tourism</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Tourism</li>
           </ol>
         </div>
