--- a/leighfisher_app/templates/about.html
+++ b/leighfisher_app/templates/about.html
@@ -11,7 +11,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>About</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>About</li>
           </ol>
         </div>
@@ -134,7 +134,7 @@
     </section><!-- End Team Section -->
 
     <!-- ======= Our Skills Section ======= -->
-    <section id="skills" class="skills">
+    {% comment %} <section id="skills" class="skills">
       <div class="container">
 
         <div class="section-title">
@@ -197,7 +197,7 @@
         </div>
 
       </div>
-    </section><!-- End Our Skills Section -->
+    </section><!-- End Our Skills Section --> {% endcomment %}
 
     <!-- ======= Breadcrumbs ======= -->
     <section id="breadcrumbs" class="breadcrumbs">
