--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -221,7 +221,7 @@
     </section><!-- End Services Section -->
 
     <!-- ======= Portfolio Section ======= -->
-    <section id="portfolio" class="portfolio">
+    {% comment %} <section id="portfolio" class="portfolio">
       <div class="container">
 
         <div class="section-title">
@@ -371,7 +371,7 @@
         </div>
 
       </div>
-    </section><!-- End Portfolio Section -->
+    </section><!-- End Portfolio Section --> {% endcomment %}
 
   </main><!-- End #main -->
 
