--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -120,7 +120,57 @@
       <!-- End of card -->
 
     </div>
-    <div class="row">
+    
+
+    <style>
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Float four columns side by side */
+.column {
+  float: left;
+  width: 25%;
+  padding: 0 10px;
+}
+
+/* Remove extra left and right margins, due to padding */
+.row {margin: 0 -5px;}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Responsive columns */
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+    display: block;
+    margin-bottom: 20px;
+  }
+}
+
+/* Style the counter cards */
+.card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  padding: 16px;
+  text-align: center;
+  background-color: #FF9C07;
+  padding: 40px;
+  margin: 40px;
+}
+</style>
+</head>
+<body>
+<h2><b>                 What we provide ?</b></h2>
+<div class="row">
   <div class="column">
     <div class="card">
       <h3>Card 1</h3>
@@ -153,7 +203,6 @@
     </div>
   </div>
 </div>
-
   <!--  <div class="container">
       <div class="card float-left">
         <div class="row ">
