--- Auto-Git Commit ---

--- a/leighfisher_app/templates/trust funding.html
+++ b/leighfisher_app/templates/trust funding.html
@@ -76,11 +76,6 @@
               </p>
               <p class="card-text">A traditional irrevocable trust will likely cost a minimum of a few thousand dollars and could cost much more.</p>
               <br>
-              <ul>
-                <li><i class="ri-check-double-line"></i>We provide a comprehensive selection of funding solutions for claimants and professionals alike. </li>
-                <li><i class="ri-check-double-line"></i>We give opportunities for the litigant to protect their capitl nd seek justice</li>
-                <li><i class="ri-check-double-line"></i>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</li>
-              </ul>
             <!--  <a href="#" class="mt-auto btn btn-primary  ">Read More</a>-->
             </div>
           </div>
@@ -169,36 +164,28 @@ body {
 </style>
 </head>
 <body>
-<h2><b>                 What we provide ?</b></h2>
+<h1 style="text-align:center;"><b> What we provide ?</h1>
 <div class="row">
   <div class="column">
     <div class="card">
-      <h3>Card 1</h3>
-      <p>Some text</p>
-      <p>Some text</p>
+      <p>We provide a comprehensive selection of funding solutions for claimants and professionals alike.</p>
     </div>
   </div>
 
   <div class="column">
     <div class="card">
-      <h3>Card 2</h3>
-      <p>Some text</p>
-      <p>Some text</p>
+      <p>We give opportunities for the litigant to protect their capitl nd seek justice</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <h3>Card 3</h3>
-      <p>Some text</p>
-      <p>Some text</p>
+      <p>We assist in optimising proposals/submissions to Insurers, and we use our expertise and relationships to your advantage.</p>
     </div>
   </div>
   
   <div class="column">
     <div class="card">
-      <h3>Card 4</h3>
-      <p>Some text</p>
       <p>Some text</p>
     </div>
   </div>
