--- a/leighfisher_app/templates/Business_adv.html
+++ b/leighfisher_app/templates/Business_adv.html
@@ -250,7 +250,7 @@ distinctive client experience through tailored service offerings and resources.
         <div class="d-flex justify-content-between align-items-center">
           <h2>Testimonials</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Testimonials</li>
           </ol>
         </div>
