--- a/leighfisher_app/templates/Con_infra.html
+++ b/leighfisher_app/templates/Con_infra.html
@@ -266,7 +266,7 @@ services to individual client requirements.
         <div class="d-flex justify-content-between align-items-center">
           <h2>Testimonials</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Testimonials</li>
           </ol>
         </div>
