--- a/leighfisher_app/templates/Tourism.html
+++ b/leighfisher_app/templates/Tourism.html
@@ -250,7 +250,7 @@ We believe that the strength of a marketing and communication strategy lies in i
         <div class="d-flex justify-content-between align-items-center">
           <h2>Testimonials</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Testimonials</li>
           </ol>
         </div>
