--- a/leighfisher_app/templates/pricing.html
+++ b/leighfisher_app/templates/pricing.html
@@ -11,7 +11,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Pricing</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Pricing</li>
           </ol>
         </div>
