--- a/leighfisher_app/templates/team.html
+++ b/leighfisher_app/templates/team.html
@@ -12,7 +12,7 @@
         <div class="d-flex justify-content-between align-items-center">
           <h2>Team</h2>
           <ol>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="{% url 'index' %}">Home</a></li>
             <li>Team</li>
           </ol>
         </div>
