--- a/leighfisher_app/templates/about.html
+++ b/leighfisher_app/templates/about.html
@@ -22,6 +22,7 @@
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
+      <h1 class="slogan-pg" ;style="text-align:center;" ><b> " YOU SAY IT, WE BUILT IT "</b></h1>
 
         <div class="row content">
           <div class="col-lg-6">
