--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -98,7 +98,7 @@
       </nav><!-- .nav-menu -->
 
       <a href="{% url 'contact' %}" class="get-started-btn ml-auto">BECOME A CLIENT</a>
-      <a href="                   " class="triconett">CAREER</a>
+      <a href="{% url 'contact' %}                   " class="get-started-btn ml-auto">CAREER</a>
 
     </div>
   </header><!-- End Header -->
