--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -16,7 +16,7 @@
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
+  <link href="https://fonts.google.com/specimen/Lobster#standard-styles" rel="stylesheet">
   <!-- Vendor CSS Files -->
   <link href="{% static 'assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
   <link href="{% static 'assets/vendor/icofont/icofont.min.css' %}" rel="stylesheet">
@@ -136,32 +136,32 @@
           <div class="col-lg-3 col-md-4 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'index' %}">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'about' %}">About us</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="{% url 'contact' %}">Contact Us</a></li>
+              {% comment %} <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li> {% endcomment %}
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-4 footer-links">
             <h4>Our Services</h4>
               <ul>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Trust Funding</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Reality</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Business/Projects Advisory</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Startup Assistance</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Engineering Services</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Logistics</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'trust_funding' %}">Trust Funding</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Reality' %}">Reality</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Business_adv' %}">Business/Projects Advisory</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Startups_ass' %}">Startup Assistance</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Engg_serv' %}">Engineering Services</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Logistics' %}">Logistics</a></li>
               </ul>
             </div>
             <div class="col-lg-3 col-md-4 footer-links"><br><br>
               <ul>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Power Venture</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'about' %}">Tourism</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'team' %}">Constructions/Infra</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'testimonial' %}">Solar</a></li>
-                <li><i class="bx bx-chevron-right"></i><a href="{% url 'testimonial' %}">International Trading</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Power_Venture' %}">Power Venture</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Tourism' %}">Tourism</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Con_infra' %}">Constructions/Infra</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'Solar' %}">Solar</a></li>
+                <li><i class="bx bx-chevron-right"></i><a href="{% url 'InternationalTrading' %}">International Trading</a></li>
               </ul>
               <!-- <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Development</a></li>
