--- Auto-Git Commit ---

--- a/leighfisher_app/templates/Solar.html
+++ b/leighfisher_app/templates/Solar.html
@@ -89,9 +89,9 @@
               culpa qui officia deserunt mollit anim id est laborum
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequa</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in</li>
+              <li><i class="ri-check-double-line"></i>We provide our expertise for Solar Project Development, Clean Energy and Regulatory Matters.</li>
+              <li><i class="ri-check-double-line"></i>We	promote efficient use of energy and to preserve the environment.</li>
+              <li><i class="ri-check-double-line"></i>Provide clean and convenient energy at affordable cost for a wide spectrum of applications.</li>
             </ul>
             <p class="font-italic">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
