Added meta tags

--- a/leighfisher_app/templates/base.html
+++ b/leighfisher_app/templates/base.html
@@ -7,8 +7,11 @@
 
   <title>Leighfisher Consultancy Pvt. Ltd.</title>
 
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+<!-- For image while sharing link on social media -->
+  <meta property="og:title" content="Leighfisher Consultancy Pvt Ltd">
+  <meta property="og:description" content="You say it, we build it!">
+  <meta property="og:url" content="https://www.leighfisher.in">
+  <meta property="og:image" content="{% static 'assets/img/logo.png' %}">
 
   <!-- Favicons -->
   <link href="{% static 'assets/img/logo-display.png' %}" rel="icon">
