home page carousel img changed

--- a/leighfisher_app/templates/index.html
+++ b/leighfisher_app/templates/index.html
@@ -23,7 +23,7 @@
         </div>
 
         <!-- Slide 2 -->
-        <div class="carousel-item" style="background-image: url('{% static 'assets/img/blog-3.jpg' %}')">
+        <div class="carousel-item" style="background-image: url('{% static 'assets/img/tour2.jpg' %}')">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">How We Help</h2>
@@ -34,7 +34,7 @@
         </div>
 
         <!-- Slide 3 -->
-        <div class="carousel-item" style="background-image: url('{% static 'assets/img/blog-3.jpg' %}')">
+        <div class="carousel-item" style="background-image: url('{% static 'assets/img/busy101.jpg' %}')">
           <div class="carousel-container">
             <div class="container">
               <h2 class="animate__animated animate__fadeInDown">Creating adaptive strategies</h2>
